welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
var ordre : Unit ="h"
                  ^BDRBuggle:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  		if (ordre = "Z"){
                            ^BDRBuggle:8: error: type mismatch;
 found   : Unit
 required: Boolean
  		if (ordre = "Z"){
                          ^BDRBuggle:11: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  		if (ordre = "R"){
                            ^BDRBuggle:11: error: type mismatch;
 found   : Unit
 required: Boolean
  		if (ordre = "R"){
                          ^BDRBuggle:15: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  		if (ordre = "L"){
                            ^BDRBuggle:15: error: type mismatch;
 found   : Unit
 required: Boolean
  		if (ordre = "L"){
                          ^BDRBuggle:19: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  		if (ordre = "I"){
                            ^BDRBuggle:19: error: type mismatch;
 found   : Unit
 required: Boolean
  		if (ordre = "I"){
                          ^BDRBuggle:24: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
   		if (ordre = "A"){
                            ^BDRBuggle:24: error: type mismatch;
 found   : Unit
 required: Boolean
   		if (ordre = "A"){
                          ^BDRBuggle:27: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  		if (ordre = "B"){
                            ^BDRBuggle:27: error: type mismatch;
 found   : Unit
 required: Boolean
  		if (ordre = "B"){
                          ^BDRBuggle:31: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  		if (ordre = "C"){
                            ^BDRBuggle:31: error: type mismatch;
 found   : Unit
 required: Boolean
  		if (ordre = "C"){
                          ^BDRBuggle:36: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      if (ordre = "Y"){
                  ^BDRBuggle:36: error: type mismatch;
 found   : Unit
 required: Boolean
      if (ordre = "Y"){
                ^