welcome.lessons.welcome.bdr.BDR.scala.code
var ordre : Unit ="h"
var fini : Boolean =false

while (fini==false){
	if (estSurMessage==true) {
  
  	ordre = litMessage(): String
  		if (ordre = "Z"){
      	recule()
    	}
  		if (ordre = "R"){
      	droite()
      	avance()
    	}
  		if (ordre = "L"){
        gauche()
        avance()
    	}
  		if (ordre = "I"){
      	gauche()
      	gauche()
      	avance()
    	}
   		if (ordre = "A"){
      	avance()
    	}
  		if (ordre = "B"){
      	avance()
      	avance()
    	}
  		if (ordre = "C"){
      	avance()
      	avance()
      	avance()
    	}
      if (ordre = "Y"){
      	recule()
      	recule()
      	recule()
      }
      
	} else { 
		fini=true
  
	}
}